fixed header spacing

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 .header-fr {
     display: flex;
     flex-direction: row;
-    justify-content: left;
+    justify-content: space-between;
     align-items: center;
     text-align: center;
     padding: 30px;
@@ -14,6 +14,8 @@
 }
 
 .header-fr>h3 {
+    display: flex;
+    justify-content: flex-start;
     padding: 1rem;
     margin: 1rem;
     border: 0.5px solid black;
